# xfa-native-rust

./: .gitattributes  .gitignore  ARCHITECTURE.md  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  MONETISATIE_PLAN.md  MONETISATIE_STRATEGIE.md  PDFStack_ISO_Validatie_Briefing.docx  SPEC.md  STRATEGISCHE_MARKTANALYSE.md  THIRD_PARTY_LICENSES.txt  avrt-config.json  avrt.json  project briefing.md
crates/cff-parser/: .cargo_vcs_info.json  Cargo.toml
crates/cff-parser/examples/: dump.rs  tounicode.rs
crates/cff-parser/src/: cff.rs  charset.rs  encoding.rs  lib.rs
crates/hayro-jbig2/: Cargo.toml
crates/hayro-jpeg2000/: Cargo.toml
crates/hayro-jpeg2000/src/j2c/: codestream.rs
crates/pdf-bench/: Cargo.toml
crates/pdf-bench/benches/: pdf_parse.rs  sdk_operations.rs  xfa_operations.rs
crates/pdf-bench/src/: lib.rs
crates/pdf-desktop/: Cargo.toml  package.json  tauri.conf.json  vitest.config.js
crates/pdf-desktop/capabilities/: default.json
crates/pdf-desktop/frontend/: index.html  main.js  style.css
crates/pdf-desktop/frontend/__tests__/: dom-structure.test.js  keyboard-shortcuts.test.js  state-management.test.js
crates/pdf-desktop/src/: commands.rs  lib.rs  main.rs  menu.rs  state.rs
crates/pdf-docx/: Cargo.toml
crates/pdf-docx/src/: error.rs  layout.rs  lib.rs  writer.rs
crates/pdf-engine/: Cargo.toml
crates/pdf-engine/src/: document.rs  error.rs  geometry.rs  lib.rs  render.rs  text.rs  thumbnail.rs
crates/pdf-extract/: Cargo.toml
crates/pdf-extract/src/: error.rs  images.rs  lib.rs  search.rs  text.rs
crates/pdf-font/: Cargo.toml
crates/pdf-font/src/: lib.rs
crates/pdf-font/src/cmap/: mod.rs  parse.rs
crates/pdf-font/src/font/: argstack.rs  mod.rs
crates/pdf-font/src/postscript/: array.rs  mod.rs  name.rs  number.rs  object.rs  string.rs
crates/pdf-interpret/: Cargo.toml
crates/pdf-interpret/src/: cache.rs  color.rs  context.rs  convert.rs  lib.rs  ocg.rs  pattern.rs  shading.rs  soft_mask.rs  util.rs  x_object.rs
crates/pdf-interpret/src/font/: blob.rs  cid.rs  mod.rs  outline.rs  standard_font.rs  true_type.rs  type1.rs  type3.rs
crates/pdf-interpret/src/function/: mod.rs  type0.rs  type2.rs  type3.rs  type4.rs
crates/pdf-interpret/src/interpret/: mod.rs  state.rs  text.rs
crates/pdf-invoice/: Cargo.toml
crates/pdf-invoice/src/: embed.rs  error.rs  fdf.rs  iso_codes.rs  lib.rs  validation.rs  xfdf.rs  xml_form.rs  zugferd.rs
crates/pdf-manip/: Cargo.toml
crates/pdf-manip/examples/: check_pdfa_compliance.rs  convert_pdfa.rs  debug_pdfa.rs  debug_widths.rs  inspect_cidset.rs
crates/pdf-manip/src/: NOTDEF_FIXES_LOG.md  bookmarks.rs  content_editor.rs  downsample.rs  encoding_utils.rs  encrypt.rs  error.rs  font_subset.rs  header_footer.rs  image_insert.rs  lib.rs  optimize.rs  pages.rs  pdfa_cleanup.rs  pdfa_colorspace.rs  pdfa_fixups.rs  pdfa_fonts.rs  pdfa_xmp.rs  text_replace.rs  text_run.rs  watermark.rs
crates/pdf-node/: .npmignore  Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/pdf-node/src/: annotation.rs  document.rs  error.rs  form.rs  lib.rs  page.rs
crates/pdf-node/tests/: smoke.test.js
crates/pdf-ocr/: Cargo.toml
crates/pdf-ocr/src/: engine.rs  error.rs  lib.rs  pipeline.rs  tesseract.rs
crates/pdf-ocr/src/paddle/: classifier.rs  detection.rs  dictionary.rs  mod.rs  models.rs  recognition.rs  utils.rs
crates/pdf-python/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/pdf-python/python/pdfengine/: __init__.py  __init__.pyi
crates/pdf-python/src/: lib.rs
crates/pdf-python/tests/: conftest.py  test_smoke.py
crates/pdf-redact/: Cargo.toml
crates/pdf-redact/src/: error.rs  lib.rs  redact.rs  search_redact.rs
crates/pdf-render/: Cargo.toml
crates/pdf-render/src/: lib.rs  renderer.rs
crates/pdf-sign/: Cargo.toml
crates/pdf-sign/src/: appearance.rs  byte_range.rs  chain.rs  cms.rs  cms_builder.rs  crypto.rs  docmdp.rs  lib.rs  ltv.rs  sig_dict.rs  sign.rs  signer.rs  string_util.rs  tsa.rs  types.rs  x509.rs
crates/pdf-sign/tests/fixtures/: test-ec-p256.p12  test-rsa.p12
crates/pdf-syntax/: Cargo.toml
crates/pdf-syntax/src/: byte_reader.rs  lib.rs  page.rs  pdf.rs  reader.rs  xref.rs
crates/pdf-xfa/: Cargo.toml
crates/pdf-xfa/src/: appearance_bridge.rs  error.rs  extract.rs  font_bridge.rs  lib.rs  paint_bridge.rs  render_bridge.rs
crates/pdf-xlsx/: Cargo.toml
crates/pdf-xlsx/src/: error.rs  lib.rs  table.rs
crates/pdfium-ffi-bridge/: Cargo.toml
crates/pdfium-ffi-bridge/src/: appearance.rs  appearance_cache.rs  colorspace.rs  data_merge.rs  dataset_sync.rs  docmdp.rs  error.rs  events.rs  fieldmdp.rs  flatten.rs  font.rs  lib.rs  ltv.rs  native_renderer.rs  pdf_reader.rs  pdfa_sanitize.rs  pipeline.rs  renderer.rs  template_parser.rs  ur3.rs  xfa_extract.rs  xmp.rs
crates/pdfium-ffi-bridge/tests/: benchmarks.rs  conformance.rs  edge_cases.rs  flatten_dynamic.rs  integration.rs  roundtrip.rs
crates/xfa-api-server/: Cargo.toml
crates/xfa-api-server/src/: error.rs  main.rs  routes.rs  state.rs
crates/xfa-api-server/static/: index.html
crates/xfa-cli/: Cargo.toml
crates/xfa-cli/src/: cmd_demo.rs  cmd_extract.rs  cmd_fill.rs  cmd_flatten.rs  cmd_info.rs  cmd_render.rs  cmd_sign.rs  cmd_validate.rs  collector.rs  main.rs
crates/xfa-cli/urls/: government-extra.txt  government.txt  irs-extra.txt  irs.txt  samples.txt
crates/xfa-layout-engine/: Cargo.toml
crates/xfa-layout-engine/src/: error.rs  font.rs  form.rs  layout.rs  lib.rs  scripting.rs  text.rs  types.rs
crates/xfa-license/: Cargo.toml
crates/xfa-license-gen/: Cargo.toml
crates/xfa-license-gen/src/: main.rs
crates/xfa-license/src/: claims.rs  error.rs  lib.rs  metering.rs  token.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_annot_create.rs  fuzz_content_editor.rs  fuzz_content_stream.rs  fuzz_data_dom.rs  fuzz_filters.rs  fuzz_form_fill.rs  fuzz_formcalc.rs  fuzz_lopdf_roundtrip.rs  fuzz_pdf_parser.rs  fuzz_pdfa_convert.rs  fuzz_redact.rs  fuzz_sign.rs  fuzz_som_path.rs  fuzz_text_replace.rs  fuzz_xfa_template.rs  fuzz_xref.rs
(+522 files in other folders)
