[workspace]
members = [
    "crates/xfa-dom-resolver",
    "crates/formcalc-interpreter",
    "crates/xfa-layout-engine",
    "crates/pdfium-ffi-bridge",
    "crates/xfa-golden-tests",
    "crates/xfa-cli",
    "crates/xfa-json",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jasperdew/xfa-native-rust"

[workspace.dependencies]
roxmltree = "0.20"
lopdf = "0.39"
pdfium-render = "0.8"
thiserror = "2"
image = "0.25"
pixelmatch = "0.1"
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
ttf-parser = "0.25"

# Internal crates
xfa-dom-resolver = { path = "crates/xfa-dom-resolver" }
formcalc-interpreter = { path = "crates/formcalc-interpreter" }
xfa-layout-engine = { path = "crates/xfa-layout-engine" }
pdfium-ffi-bridge = { path = "crates/pdfium-ffi-bridge" }
xfa-json = { path = "crates/xfa-json" }
