[workspace]
members = [
    # --- Forked from hayro (MIT + Apache-2.0) ---
    "crates/pdf-syntax",
    "crates/pdf-interpret",
    "crates/pdf-font",
    "crates/pdf-render",
    "crates/hayro-jbig2",
    "crates/hayro-jpeg2000",
    "crates/hayro-ccitt",

    # --- New engine crates ---
    "crates/pdf-engine",
    "crates/pdf-forms",
    "crates/pdf-annot",
    "crates/pdf-sign",
    "crates/pdf-compliance",
    "crates/pdf-capi",

    # --- XFA engine (existing, wrapped) ---
    "crates/pdf-xfa",
    "crates/xfa-dom-resolver",
    "crates/formcalc-interpreter",
    "crates/xfa-layout-engine",
    "crates/xfa-json",

    # --- Bindings & tools ---
    # pdf-python: excluded — PyO3 requires matching Python. Build via maturin.
    "crates/pdf-node",
    "crates/xfa-wasm",
    "crates/xfa-cli",

    # --- Existing support crates ---
    "crates/pdfium-ffi-bridge",
    "crates/xfa-golden-tests",
    "crates/xfa-api-server",
    "crates/xfa-license",

    # --- PDF manipulation ---
    "crates/pdf-manip",

    # --- Data exchange + EU compliance (Fase O) ---
    "crates/pdf-invoice",

    # --- Content intelligence (Fase N) ---
    "crates/pdf-extract",
    "crates/pdf-redact",
    "crates/pdf-ocr",

    # --- Benchmarks ---
    "crates/pdf-bench",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jasperdew/xfa-native-rust"

[workspace.dependencies]
roxmltree = "0.20"
lopdf = "0.39"
pdfium-render = "0.8"
thiserror = "2"
image = "0.25"
pixelmatch = "0.1"
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
ttf-parser = "0.25"

# Internal crates (existing XFA)
xfa-dom-resolver = { path = "crates/xfa-dom-resolver" }
formcalc-interpreter = { path = "crates/formcalc-interpreter" }
xfa-layout-engine = { path = "crates/xfa-layout-engine" }
pdfium-ffi-bridge = { path = "crates/pdfium-ffi-bridge" }
xfa-json = { path = "crates/xfa-json" }
xfa-license = { path = "crates/xfa-license" }

# Forked crates
pdf-syntax = { path = "crates/pdf-syntax" }
pdf-interpret = { path = "crates/pdf-interpret" }
pdf-font = { path = "crates/pdf-font" }
pdf-render = { path = "crates/pdf-render" }

# New engine crates
pdf-forms = { path = "crates/pdf-forms" }
pdf-annot = { path = "crates/pdf-annot" }
pdf-xfa = { path = "crates/pdf-xfa" }
pdf-sign = { path = "crates/pdf-sign" }
pdf-engine = { path = "crates/pdf-engine" }
pdf-compliance = { path = "crates/pdf-compliance" }
pdf-manip = { path = "crates/pdf-manip" }
pdf-invoice = { path = "crates/pdf-invoice" }

# Content intelligence (Fase N)
pdf-extract = { path = "crates/pdf-extract" }
pdf-redact = { path = "crates/pdf-redact" }
pdf-ocr = { path = "crates/pdf-ocr" }
