[package]
name = "xfa-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
pdf-syntax = { path = "../crates/pdf-syntax", features = ["std", "images"] }
xfa-dom-resolver = { path = "../crates/xfa-dom-resolver" }
formcalc-interpreter = { path = "../crates/formcalc-interpreter" }
lopdf = { path = "../crates/lopdf" }
pdf-manip = { path = "../crates/pdf-manip" }
pdf-redact = { path = "../crates/pdf-redact" }
pdf-annot = { path = "../crates/pdf-annot" }
pdf-forms = { path = "../crates/pdf-forms" }
pdf-sign = { path = "../crates/pdf-sign" }
pdf-compliance = { path = "../crates/pdf-compliance" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_pdf_parser"
path = "fuzz_targets/fuzz_pdf_parser.rs"
doc = false

[[bin]]
name = "fuzz_content_stream"
path = "fuzz_targets/fuzz_content_stream.rs"
doc = false

[[bin]]
name = "fuzz_xref"
path = "fuzz_targets/fuzz_xref.rs"
doc = false

[[bin]]
name = "fuzz_filters"
path = "fuzz_targets/fuzz_filters.rs"
doc = false

[[bin]]
name = "fuzz_data_dom"
path = "fuzz_targets/fuzz_data_dom.rs"
doc = false

[[bin]]
name = "fuzz_formcalc"
path = "fuzz_targets/fuzz_formcalc.rs"
doc = false

[[bin]]
name = "fuzz_som_path"
path = "fuzz_targets/fuzz_som_path.rs"
doc = false

[[bin]]
name = "fuzz_content_editor"
path = "fuzz_targets/fuzz_content_editor.rs"
doc = false

[[bin]]
name = "fuzz_text_replace"
path = "fuzz_targets/fuzz_text_replace.rs"
doc = false

[[bin]]
name = "fuzz_redact"
path = "fuzz_targets/fuzz_redact.rs"
doc = false

[[bin]]
name = "fuzz_pdfa_convert"
path = "fuzz_targets/fuzz_pdfa_convert.rs"
doc = false

[[bin]]
name = "fuzz_lopdf_roundtrip"
path = "fuzz_targets/fuzz_lopdf_roundtrip.rs"
doc = false

[[bin]]
name = "fuzz_form_fill"
path = "fuzz_targets/fuzz_form_fill.rs"
doc = false

[[bin]]
name = "fuzz_annot_create"
path = "fuzz_targets/fuzz_annot_create.rs"
doc = false

[[bin]]
name = "fuzz_sign"
path = "fuzz_targets/fuzz_sign.rs"
doc = false
