[package]
name = "pdf-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
pdf-syntax = { path = "../pdf-syntax", features = ["std", "images"] }
pdf-engine = { path = "../pdf-engine" }
pdf-compliance = { path = "../pdf-compliance" }
pdfium-ffi-bridge.workspace = true
xfa-dom-resolver.workspace = true
formcalc-interpreter.workspace = true
xfa-layout-engine.workspace = true
lopdf.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pdf_parse"
harness = false

[[bench]]
name = "xfa_operations"
harness = false

[[bench]]
name = "sdk_operations"
harness = false

