[package]
name = "pdf-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PDF content extraction: images, text with positions, and full-text search"

[dependencies]
lopdf.workspace = true
thiserror.workspace = true
flate2 = "1"

[dev-dependencies]
tempfile = "3"
