[package]
name = "pdf-manip"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PDF manipulation: pages, encryption, watermarks, optimization, bookmarks"

[dependencies]
lopdf.workspace = true
pdf-font.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
flate2 = "1"
image = { workspace = true, optional = true }

[features]
default = ["serde", "image-insert"]
serde = ["dep:serde", "dep:serde_json"]
watermark-image = ["dep:image"]
image-insert = ["dep:image"]

[dev-dependencies]
tempfile = "3"
