[package]
name = "pdf-manip"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PDF manipulation: pages, encryption, watermarks, optimization, bookmarks"

[dependencies]
lopdf.workspace = true
pdf-font.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
flate2 = "1"
weezl = "0.1"
image = { workspace = true, optional = true }
subsetter = { workspace = true, optional = true }
xmp-writer = { workspace = true, optional = true }
roxmltree.workspace = true
ttf-parser = { workspace = true }
cff-parser = { workspace = true }

[features]
default = ["serde", "image-insert", "font-subset", "pdfa-convert"]
serde = ["dep:serde", "dep:serde_json"]
watermark-image = ["dep:image"]
image-insert = ["dep:image"]
font-subset = ["dep:subsetter"]
pdfa-convert = ["dep:xmp-writer"]

[dev-dependencies]
tempfile = "3"
pdf-syntax.workspace = true
pdf-compliance.workspace = true
