[package]
name = "pdf-node"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Node.js bindings for the PDF engine via napi-rs."

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["async", "serde-json", "napi9"] }
napi-derive = "2"
pdf-engine = { path = "../pdf-engine" }
pdf-forms = { path = "../pdf-forms" }
pdf-annot = { path = "../pdf-annot" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt"] }

[build-dependencies]
napi-build = "2"
