[package]
name = "pdf-ocr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OCR integration for scanned PDFs with pluggable engine support"

[dependencies]
lopdf.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
