[package]
name = "pdf-ocr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OCR integration for scanned PDFs with pluggable engine support"

[features]
default = []
tesseract = ["leptess"]

[dependencies]
lopdf.workspace = true
thiserror.workspace = true
leptess = { version = "0.14", optional = true }

[dev-dependencies]
tempfile = "3"
