[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pdfengine"
version = "0.1.0"
description = "High-performance PDF engine — rendering, text extraction, forms, signatures."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Graphics",
]
keywords = ["pdf", "render", "forms", "signatures", "rust"]

[project.optional-dependencies]
pillow = ["Pillow"]
numpy = ["numpy"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pdfengine._native"
