[package]
name = "pdfium-ffi-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
xfa-dom-resolver.workspace = true
xfa-layout-engine.workspace = true
pdfium-render.workspace = true
thiserror.workspace = true
image.workspace = true
