[package]
name = "pdfium-ffi-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
pdfium = ["dep:pdfium-render"]

[dependencies]
xfa-dom-resolver.workspace = true
xfa-layout-engine.workspace = true
lopdf.workspace = true
pdfium-render = { workspace = true, optional = true }
thiserror.workspace = true
image.workspace = true
ttf-parser.workspace = true
