[package]
name = "xfa-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "xfa-cli"
path = "src/main.rs"

[[bin]]
name = "xfa-collector"
path = "src/bin/xfa-collector.rs"

[[bin]]
name = "edge-case-report"
path = "src/bin/edge-case-report.rs"

[[bin]]
name = "accuracy-report"
path = "src/bin/accuracy-report.rs"

[[bin]]
name = "edge-case-analyzer"
path = "src/bin/edge-case-analyzer.rs"

[[bin]]
name = "xfa-license-tool"
path = "src/bin/license_tool.rs"

[dependencies]
xfa-dom-resolver.workspace = true
formcalc-interpreter.workspace = true
xfa-layout-engine.workspace = true
pdfium-ffi-bridge.workspace = true
xfa-license.workspace = true
anyhow.workspace = true
reqwest.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
roxmltree.workspace = true
lopdf.workspace = true
base64 = "0.22"
