[package]
name = "xfa-layout-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
xfa-dom-resolver.workspace = true
formcalc-interpreter.workspace = true
thiserror.workspace = true
ab_glyph = "0.2"
ttf-parser = "0.25"
subsetter = "0.2"
